--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-PORT=5000
+
 # MONGO_URI=mongodb+srv://<munna>:<munna123>@cluster0.mongodb.net/ijmsbc?retryWrites=true&w=majority
 
+# PORT=5000
+# MONGO_URI=mongodb+srv://ijmsbc:P1bKrCSra8BHYYcN@cluster0.ai3otyg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+
+
+
+PORT=5000
 MONGO_URI=mongodb+srv://ijmsbc:P1bKrCSra8BHYYcN@cluster0.ai3otyg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-
